# pai_ros

./: .gitignore  TODO.md
src/SDK/Python/: CMakeLists.txt  MANIFEST.in  setup.py
src/SDK/Python/lib/hightorque_biped_sdk_core/: CMakeLists.txt
src/SDK/Python/src/hightorque_biped_sdk/: Livelybot_Driver_bind.cpp  __init__.py
src/SDK/example/: example.cpp
src/SDK/example_python/: example.py
src/SDK/include/: Livelybot_Driver.h
src/pai_controller/: CMakeLists.txt  package.xml
src/pai_controller/ConvexMPC/: Constraints.cpp  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  SolverMPC.cpp  SolverMPC.h
src/pai_controller/include/: use.h
src/pai_controller/include/LivelyBot/USBCAN/: LD_Socket_Can.h  LD_USBCAN.h
src/pai_controller/include/common/: Biped.h  ControlFSMData.h  cTypes.h  cppTypes.h  enumClass.h
src/pai_controller/include/interface/: CmdPanel.h  Config.h  IOInterface.h  Livelybot_Driver.h  Livelybot_motor.h  PaiIO.h  lowpass.h  send_recv.h
src/pai_controller/include/messages/: LowLevelCmd.h  LowlevelState.h
src/pai_controller/src/: main.cpp  start_socket_can.cpp
src/pai_controller/src/FSM/: FSMState_Passive.cpp  FSMState_Walking.cpp
src/pai_controller/src/LivelyBot/USBCAN/: LD_Socket_Cam.cpp
src/pai_controller/src/common/: LegController.cpp  OrientationEstimator.cpp
src/pai_controller/src/interface/: KeyBoard.cpp  Livelybot_Driver.cpp  Livelybot_motor.cpp  PaiIO.cpp  lowpass.cpp  send_recv.cpp
src/pai_gazebo/: CMakeLists.txt  package.xml
src/pai_gazebo/launch/: new_b.launch
src/pai_motor_controller/: CMakeLists.txt  package.xml  pai_controller_plugins.xml
src/pai_motor_controller/include/: motor_controller.h  pai_motor_control_tool.h
src/pai_motor_controller/src/: motor_controller.cpp  pai_motor_control_tool.cpp
src/pai_msgs/: CMakeLists.txt  package.xml
src/pai_test/: CMakeLists.txt  package.xml
src/pai_urdf/: CMakeLists.txt  package.xml
src/pai_urdf/config/: joint_names_PAI-urdf.yaml  robot_control.yaml
src/pai_urdf/launch/: display.launch  gazebo.launch
src/pai_urdf/meshes/: base_link.STL  left-ankle.STL  left-hip-abad.STL  left-hip-pitch.STL  left-hip-yaw.STL  left-knee.STL  right-ankle.STL  right-hip-abad.STL  right-hip-pitch.STL  right-hip-yaw.STL  right-knee.STL
src/pai_urdf/rviz/: 123.rviz
src/pai_urdf/urdf/: .PAI-urdf.cache  PAI-urdf.csv  PAI-urdf.proto  pai_urdf.urdf
src/pai_urdf/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro
src/spi_motor_control/: CMakeLists.txt  package.xml
src/spi_motor_control/src/: Livelybot_Driver.cpp  send_recv.cpp
